# PasswordManager

./: .gitignore  Dockerfile  PasswordManager.spec  PasswordManager_windows.spec  pyproject.toml  requirements_all.txt  requirements_client.txt  requirements_server.txt  run_client.py
deployment/server/: .env.example  docker-compose.yml
src/client/: database.py  main.py  profile_manager.py  state.py  sync_service.py
src/client/views/: login.py  register.py  sync_center.py  vault.py
src/core/: crypto.py  generator.py  models.py
src/server/: config.py  database.py  main.py  models.py  security.py
src/server/routers/: auth.py  sync.py
